init: notify
